various QA adjustments